]v gbnmlç~